# fastapi-proyecto

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1c44f8ccfafb_add_externalid_and_ip_yo_session.py  39c4deb7cc1f_primera_migracion.py
app/: database.py  main.py
app/core/: errors.py  security.py  settings.py
app/db/: database.py
app/db/seeds/: admin.py
app/dependencies/: auth.py
app/models/: __init__.py  log.py  notificacion.py  points.py  report.py  user.py
app/routers/: auth.py  reports.py
app/schemas/: report.py  user.py
app/services/: auth.py  reports.py
scripts/: manage.py
